<resources>
    <string name="app_name">Cliky</string>
    <string name="title_home">Home</string>
    <string name="title_Offers">Offers</string>
    <string name="title_Retailers">Retailers</string>
    <string name="title_account">Account</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">EMAIL</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in">Sign In</string>
    <string name="title_forget_password">Forget Password?</string>
    <string name="title_or">OR</string>
    <string name="action_sign_up">Register</string>
    <string name="create_an_account">Create an Account</string>
    <string name="prompt_username">USERNAME</string>
    <string name="prompt_first_name">FIRST NAME</string>
    <string name="prompt_last_name">LAST NAME</string>
    <string name="prompt_confirm_password">CONFIRM PASSWORD</string>
    <string name="prompt_phone_no">PHONE NO.</string>
    <string name="prompt_street">STREET</string>
    <string name="prompt_city">CITY</string>
    <string name="prompt_zip">ZIP</string>
    <string name="text_country">COUNTRY</string>
    <string name="activation_confirmation">An Activation email has been sent. Please Activate your account first and Continue signin.</string>
    <string name="error_creating_account">Error while creating an account. Please retry.</string>
    <string name="validation_error">Validation Error</string>
    <string name="credentials_error">Email and Password combination doesn\'t match.</string>
    <string name="internet_issue">No Internet Connection</string>

    <string-array name="country_arrays">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>America</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bhutan</item>
        <item>Bissau</item>
        <item>Bolivia</item>
        <item>Bosnia</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>British</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina</item>
        <item>Burma</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>Costa Rica</item>
        <item>country debt</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>East Timor</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Emirate</item>
        <item>England</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Great Britain</item>
        <item>Greece</item>
        <item>Grenada</item>
        <item>Grenadines</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Herzegovina</item>
        <item>Honduras</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>in usa</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Ivory Coast</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Korea</item>
        <item>Kosovo</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macedonia</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Panama</item>
        <item>Papua</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome</item>
        <item>Saudi Arabia</item>
        <item>scotland</item>
        <item>scottish</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>St. Kitts</item>
        <item>St. Lucia</item>
        <item>St Kitts</item>
        <item>St Lucia</item>
        <item>Saint Kitts</item>
        <item>Santa Lucia</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Tobago</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>USA</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>wales</item>
        <item>welsh</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_updated">Last Updated:</string>
    <string name="top_dealer">Top Dealers</string>
    <string name="app_tag">Never Miss a Deal - Cliky</string>
    <string name="message_network_problem">No Internet Connection</string>
    <string name="update_type">Update Type</string>
    <string name="retailer">Retailer</string>
    <string name="department">Department</string>
    <string name="apply">Apply</string>
    <string name="set_as_default">Set as Default</string>
    <string name="orderBy">Order By</string>
    <string name="filterBy">Filter By</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="email_address">Email</string>
    <string name="user">User</string>
    <string name="phone_number">Phone No.</string>
    <string name="change_password">Change Password</string>
    <string name="cancel">Cancel</string>
    <string name="about_us">About Us</string>

    <string-array name="about">
        <item>Version</item>
        <item>Official website</item>
        <item>Feedback</item>
        <item>Having Trouble</item>
        <item>Developed By:</item>
    </string-array>
    <string-array name="about_detail">
        <item>Version: 0.1</item>
        <item>www.cliky.ca</item>
        <item>Send us an email</item>
        <item>Share with us the problem</item>
        <item>Utsav Ashish Koju / Web-android-iphone developer</item>
    </string-array>
</resources>
