<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/sign_in"
            android:textColor="#24272C"
            android:textSize="26dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />
        <View android:id="@+id/separator"
            android:layout_below="@id/sign_in"
            android:background="#2F8FFF"
            android:layout_width = "80dp"
            android:layout_height="3dip"/>
    </RelativeLayout>
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:textSize="13dp"
                    android:textColor="#3C71AE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:textSize="13dp"
                    android:textColor="#3C71AE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_margin="10dp"
                android:layout_gravity="left"
                android:textSize="15dp"
                android:textColor="#2F8FFF"
                android:id="@+id/forget_password"
                android:text="@string/title_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:textSize="16dp"
                android:textColor="#FFFFFF"
                android:background="#2F8FFF"
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <TextView
                android:textStyle="bold"
                android:layout_margin="20dp"
                android:textSize="15dp"
                android:textColor="#2F8FFF"
                android:id="@+id/or"
                android:text="@string/title_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:textSize="16dp"
                android:textColor="#FFFFFF"
                android:background="#2F8FFF"
                android:id="@+id/email_sign_up"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_up"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>