<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Signup">


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/change_password_process"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textColor="#24272C"
            android:textSize="26dp" />
        <View android:id="@+id/separator"
            android:layout_below="@id/change_password"
            android:background="#2F8FFF"
            android:layout_width = "80dp"
            android:layout_height="3dip"/>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/sign_up_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView android:id="@+id/layout_username"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#404040"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="2dp"
                android:text="@string/user" />
            <EditText
                android:id="@+id/user"
                android:textColor="@color/edittext_text_color"
                android:background="@drawable/edt_text_bg"
                android:padding="5dp"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:enabled="false"
                android:singleLine="true" />

            <TextView android:id="@+id/layout_password"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#404040"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="2dp"
                android:text="@string/prompt_password" />
            <EditText
                android:id="@+id/password"
                android:textColor="@color/edittext_text_color"
                android:background="@drawable/edt_text_bg"
                android:padding="5dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView android:id="@+id/layout_confirm_password"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#404040"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="2dp"
                android:text="@string/prompt_confirm_password" />
            <EditText
                android:id="@+id/confirmpassword"
                android:textColor="@color/edittext_text_color"
                android:background="@drawable/edt_text_bg"
                android:padding="5dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true" />
            <RelativeLayout
                android:layout_marginTop="15dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:layout_alignParentBottom="true"
                        android:textSize="16dp"
                        android:layout_margin="5dp"
                        android:textColor="#FFFFFF"
                        android:background="#2F8FFF"
                        android:id="@+id/password_change"
                        style="?android:textAppearanceSmall"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/change_password"
                        android:textStyle="bold" />
                    <Button
                        android:layout_alignParentBottom="true"
                        android:layout_toRightOf="@id/email_sign_up"
                        android:textSize="16dp"
                        android:layout_margin="5dp"
                        android:textColor="#FFFFFF"
                        android:background="#2F8FFF"
                        android:id="@+id/cancel"
                        style="?android:textAppearanceSmall"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cancel"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>